plugins {
    id 'application'
}

group = 'pl.edu.agh.macwozni'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
    withJavadocJar()
}

application {
    mainClass = 'pl.edu.agh.macwozni.dmeshparallel.Application'
    applicationDefaultJvmArgs = ['--enable-preview']
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 26
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test).configureEach {
    jvmArgs += '--enable-preview'
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
    options.addBooleanOption('Xdoclint:all', true)
    options.addBooleanOption('-enable-preview', true)
    options.addStringOption('-release', '26')
}

tasks.named('jar') {
    manifest {
        attributes('Main-Class': application.mainClass.get())
    }
}
